# qusql

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  POSTGRESQL1_STRATEGY.md  README.md  check.py  reddit-post.md  run_ci.py  semver-checks.sh  x.json  x.sh
.github/workflows/: book.yml  rust.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  qusql-mysql.md  qusql-parse.md  qusql-py-mysql-type.md  qusql-sqlx-type.md  qusql-type.md
examples/qusql-mysql-type-books/: Cargo.toml  README.md  qusql-mysql-type-schema.sql
examples/qusql-mysql-type-books/src/: main.rs
examples/qusql-mysql-type-notes/: Cargo.toml  README.md  qusql-mysql-type-schema.sql
examples/qusql-mysql-type-notes/src/: main.rs
examples/qusql-parse-lint/: Cargo.toml  example.sql
examples/qusql-parse-lint/src/: main.rs
examples/qusql-py-mysql-type-books/: README.md  main.py  mysql-type-schema.sql  pyproject.toml
examples/qusql-py-mysql-type-notes/: README.md  main.py  mysql-type-schema.sql  pyproject.toml
examples/qusql-sqlx-type-books/: Cargo.toml  README.md  sqlx-type-schema.sql
examples/qusql-sqlx-type-books/src/: main.rs
examples/qusql-sqlx-type-mariadb-notes/: Cargo.toml  sqlx-type-schema.sql
examples/qusql-sqlx-type-mariadb-notes/src/: main.rs
examples/qusql-sqlx-type-notes/: Cargo.toml  README.md  sqlx-type-schema.sql
examples/qusql-sqlx-type-notes/src/: main.rs
examples/qusql-type-check/: Cargo.toml  schema.sql
examples/qusql-type-check/src/: main.rs
parse-test/: Cargo.toml  mysql-setups.json  mysql-tests.json  postgres-setups.json  postgres-tests.json  rust_lexer.py  test.py  x.sql
parse-test/src/: main.rs
qusql-mysql/: Cargo.toml  README.md
qusql-mysql-test/: Cargo.toml  qusql-mysql-type-schema.sql
qusql-mysql-test/src/: test.rs
qusql-mysql-type/: Cargo.toml  README.md  qusql-mysql-type-schema.sql
qusql-mysql-type-macro/: Cargo.toml
qusql-mysql-type-macro/src/: lib.rs
qusql-mysql-type/src/: lib.rs
qusql-mysql/src/: args.rs  auth.rs  bind.rs  chrono.rs  connection.rs  constants.rs  decode.rs  handle_drop.rs  lib.rs  lru.rs  package_parser.rs  plain_types.rs  pool.rs  row.rs
qusql-parse/: Cargo.toml  README.md  build.rs  check_exports.py  keywords.py  mysql-functions.md
qusql-parse/src/: alter.rs  alter_role.rs  alter_table.rs  alter_type.rs  byte_to_char.rs  copy.rs  create.rs  create_constraint_trigger.rs  create_function.rs  create_index.rs  create_option.rs  create_role.rs  create_table.rs  create_trigger.rs  create_view.rs  data_type.rs  delete.rs  drop.rs  expression.rs  flush.rs  function_expression.rs  grant.rs  identifier.rs  insert_replace.rs  issue.rs  keywords.rs  kill.rs  lexer.rs  lib.rs  lock.rs  operator.rs  parser.rs  qualified_name.rs  rename.rs  restrict.rs  select.rs  show.rs  span.rs  statement.rs  truncate.rs  (+4 more)
qusql-py-mysql-type/: README.md  publish.sh  pyproject.toml  setup.py
qusql-py-mysql-type-plugin/: Cargo.toml  README.md  publish.sh  pyproject.toml
qusql-py-mysql-type-plugin/mysql_type_plugin/: __init__.py
qusql-py-mysql-type-plugin/qusql_mysql_type_plugin/: __init__.py
qusql-py-mysql-type-plugin/src/: lib.rs
qusql-py-mysql-type-test/: mysql-type-schema.sql  pyproject.toml  run_test.sh  test.py
qusql-py-mysql-type/qusql_mysql_type/: __init__.py
qusql-sqlx-type/: Cargo.toml  README.md
qusql-sqlx-type-macro/: Cargo.toml
qusql-sqlx-type-macro/src/: lib.rs
qusql-sqlx-type-test/: Cargo.toml  sqlx-type-schema.sql
qusql-sqlx-type-test/src/: lib.rs  test.rs
qusql-sqlx-type/src/: lib.rs
qusql-type/: Cargo.toml  README.md
qusql-type/mariadb_test/: Cargo.toml
qusql-type/mariadb_test/src/: connection.rs  main.rs  tester.rs
qusql-type/src/: compat.rs  lib.rs  schema.rs  type_.rs  type_binary_expression.rs  type_call.rs  type_delete.rs  type_expression.rs  type_function.rs  type_insert_replace.rs  type_lock.rs  type_reference.rs  type_select.rs  type_set.rs  type_statement.rs  type_truncate.rs  type_update.rs  typer.rs
schema-parse-test/: Cargo.toml  mysql_schema.sql
schema-parse-test/src/: main.rs
type-test/: Cargo.toml  mysql1.json  mysql1.queries.json  mysql1.queries.sql  mysql1.sql  postgresql1.json  postgresql1.queries.json  postgresql1.queries.sql  postgresql2.json  postgresql2.queries.json  postgresql2.queries.sql  postgresql2.sql  postgresql3.json  postgresql3.sql  simpleadmin.json  simpleadmin.queries.json  simpleadmin.queries.sql  test.py
type-test/src/: main.rs
type_test/: postgresql1.sql  test.py
type_test/src/: main.rs
