[package]
name = "qusql"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "benchmark",
    "qusql-mysql-test",
    "qusql-mysql-type-macro",
    "qusql-mysql-type",
    "qusql-mysql",
    "qusql-parse",
    "qusql-py-mysql-type-plugin",
    "qusql-sqlx-type-macro",
    "qusql-sqlx-type",
    "qusql-type",
    "qusql-type/mariadb_test",
    "parse-test",
]
