[package]
name = "qusql"
version = "0.1.1"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "benchmark",
    "examples/qusql-sqlx-type-books",
    "examples/qusql-sqlx-type-notes",
    "examples/qusql-parse-lint",
    "examples/qusql-mysql-type-books",
    "examples/qusql-mysql-type-notes",
    "examples/qusql-type-check",
    "qusql-mysql-test",
    "qusql-mysql-type-macro",
    "qusql-mysql-type",
    "qusql-mysql",
    "qusql-parse",
    "qusql-py-mysql-type-plugin",
    "qusql-sqlx-type-macro",
    "qusql-sqlx-type",
    "qusql-type",
    "qusql-type/mariadb_test",
    "parse-test",
    "type-test",
]
