[package]
name = "parse-test"
version = "0.1.0"
edition = "2024"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "deny"

[dependencies]
ariadne = "0.6"
clap = {version = "4", features = ["derive"]}
qusql-parse = { path = "../qusql-parse" }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
