[package]
name = "qusql-mysql-type-macro"
version = "0.1.0"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = [ "mysql", "posgresql", "sqly", "procmacro" ]
description = "Proc macros for sqly-type"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_safety_doc = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = "1"
qusql-type = { path="../qusql-type" }
ariadne = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
