[package]
name = "qusql-mysql"
version = "0.1.0"
edition = "2024"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_safety_doc = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"

[features]
cancel_testing = []
stats = []
chrono = ["dep:chrono"]
list_hack = []
sha2_auth = ["rsa", "sha2"]
default = ["sha2_auth"]

[dependencies]
bytes = "1.11.0"
chrono = {version = "0.4", optional = true}
rsa = {version = "0.9.9", optional = true}
sha1 = "0.10.6"
sha2 = {version = "0.10.9", optional = true}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "io-util", "time", "sync", "rt"] }
