[package]
name = "qusql-parse"
version = "0.1.0"
edition = "2024"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
keywords = [ "mysql", "postgresql", "sql", "lexer", "parser" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/antialize/sql-parse/"
homepage = "https://github.com/antialize/sql-parse/"
description = "Parser for sql"
