[package]
name = "qusql-mysql-type-plugin"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qusql_mysql_type_plugin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
qusql-type = {version="0.1.0", path="../qusql-type" }
ariadne = "0.6"
yoke = { version ="0.8", features = ["derive", "alloc"] }
