[package]
name = "qusql-mysql-type-plugin"
version = "0.1.3"
edition = "2021"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
description = "MySQL type plugin for qusql"
license = "Apache-2.0"
repository = "https://github.com/antialize/qusql"
homepage = "https://github.com/antialize/qusql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qusql_mysql_type_plugin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
qusql-type = {version="0.3.0", path="../qusql-type" }
ariadne = "0.6"
yoke = { version ="0.8", features = ["derive", "alloc"] }
