[package]
name = "qusql-sqlx-type"
version = "0.0.1"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = [ "mysql", "sqlx", "typer" ]
readme = "README.md"
repository = "https://github.com/antialize/qusql/"
homepage = "https://github.com/antialize/qusql/"
description = "Typed sql macros for sqlx"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_safety_doc = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_docs_in_private_items = "deny"

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["chrono", "runtime-tokio-native-tls", "mysql"] }

[dependencies]
qusql-sqlx-type-macro = { version = "0.1.0", path = "../qusql-sqlx-type-macro"}
chrono = "0.4"
