[package]
name = "qusql-type"
version = "0.1.0"
edition = "2024"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
keywords = [ "mysql", "postgesql", "sql", "typer" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/antialize/qusql/"
homepage = "https://github.com/antialize/qusql/"
description = "Typer for sql"

[dev-dependencies]
codespan-reporting = "0.13"

[dependencies]
qusql-parse = {path="../qusql-parse", version="0.1.0"}
