[package]
name = "qusql-sqlx-type-mariadb-notes"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mariadb-notes"
path = "src/main.rs"
doc = false

[dependencies]
qusql-sqlx-type = { path = "../../qusql-sqlx-type" }
sqlx = { version = "0.8", default-features = false, features = [
    "mysql",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1", features = ["full"] }
