[package]
name = "qusql-sqlx-type-notes"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "notes"
path = "src/main.rs"
doc = false

[dependencies]
qusql-sqlx-type = { path = "../../qusql-sqlx-type" }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
